# aegis-hydra

./: .env  .gitignore  BINANCE_MIGRATION_GUIDE.md  LATENCY_FIXES_SUMMARY.md  LATENCY_TRACKING_GUIDE.md  backtest_BTCUSD.csv  backtest_BTC_results.txt  backtest_ETHUSD.csv  backtest_ETH_results.txt  backtest_USDTUSD.csv  backtest_USDT_results.txt  btc_results.txt  chaos_btc_results.txt  chaos_eth_results.txt  chaos_usdt_results.txt  check_position.py  check_trades.py  diagnose_spikes.py  eth_results.txt  fix_merge_conflicts.sh  generate_chaos_data.py  generate_portfolio_data.py  hft_market_data.csv  hft_signals.csv  launcher.py  live.html  measure_binance_latency.py  measure_true_latency.py  paper_log.csv  paper_state.json  paper_trades.csv  rebuild_and_run.sh  requirements.txt  setup_remote.sh  usdt_results.txt  validate_latency_fixes.py  visualize_latency.py
aegis_hydra/: __init__.py  config.yaml  main.py  requirements.txt
aegis_hydra/agents/: __init__.py  base_solver.py  brownian_swarm.py  cpp_grid.py  entropic_swarm.py  hamiltonian_swarm.py  ising_grid.py  population.py
aegis_hydra/core/: __init__.py  entropy.py  filter.py  fluid_dynamics.py  mechanics.py  stochastic.py
aegis_hydra/cpp/: Makefile  README_CRITICAL_FLOW.md  aegis_daemon  critical_flow_daemon  critical_flow_daemon.cpp  critical_flow_strategy.h  hawkes_estimator.h  ising_engine.cpp  ising_kernel.cpp  main.cpp  mlofi_calculator.h  order_book.cpp  order_book.h  risk_guard.h
aegis_hydra/market/rust_ingestion/: Cargo.toml
aegis_hydra/market/rust_ingestion/src/: lib.rs
aegis_hydra/tools/: hft_pipe.py  (+22 more)
(+18 files in other folders)
